syntax = "proto3";

                 package wedInvComment;
service WedInvCommentService {
 rpc createWedInvComment (WedInvCommentCreateInput) returns (WedInvComment) {}
rpc wedInvComments (findManyParams) returns (stream WedInvComment) {}
rpc wedInvComment (WedInvCommentWhereUniqueInput) returns (WedInvComment) {}
rpc updateWedInvComment (WedInvCommentUpdateInput) returns (WedInvComment) {}
rpc deleteWedInvComment (WedInvCommentWhereUniqueInput) returns (WedInvComment) {} 
 }
message WedInvCommentCreateInput {
string comment = 1;
string confirmation = 2;
string createdAt = 3;
string id = 4;
string moment = 5;
string name = 6;
string updatedAt = 7;
};
message WedInvComment {
string comment = 1;
string confirmation = 2;
string createdAt = 3;
string id = 4;
string moment = 5;
string name = 6;
string updatedAt = 7;
};
message WedInvCommentWhereUniqueInput {
string comment = 1;
string confirmation = 2;
string createdAt = 3;
string id = 4;
string moment = 5;
string name = 6;
string updatedAt = 7;
};
message WedInvCommentUpdateInput {
string comment = 1;
string confirmation = 2;
string createdAt = 3;
string id = 4;
string moment = 5;
string name = 6;
string updatedAt = 7;
};
message findManyParams {

};